# CPP-Public-Header-Abstract-Class-Declarations-Example

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp  app_failure.cpp  app_virtual.cpp
include/: bot.h  public_bot.h  public_virtual_bot.h  virtual_bot.h
src/: CMakeLists.txt  bot.cpp  virtual_bot.cpp
